platform-gitops/manifests/apicurio.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apicurio
  namespace: kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apicurio
  template:
    metadata:
      labels:
        app: apicurio
    spec:
      containers:
        - name: apicurio
          image: apicurio/apicurio-registry-mem:2.4.2.Final
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: apicurio
  namespace: kafka
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: apicurio
